# project-tiger

./: .gitmodules  CMakeLists.txt  README.md  test-output-iteration1-demo.txt
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  requester.cpp  requester.h  util.cpp  util.h
src/client/helper/: CMakeLists.txt  parser.h
src/cmake/: FindCURLPP.cmake  LibFindMacros.cmake
src/game/: card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h  texasHoldemGame.h  user.h
src/libraries/sqlite/: CMakeList.txt  CMakeLists.txt
src/server/: CMakeLists.txt  auth.cpp  auth.h  main.cpp  tiger.cpp  tiger.h  util.cpp  util.h
src/sqliteDB/: CMakeLists.txt  main.cpp  sql.cpp  sql.h  stat.cpp  stat.h
test/: CMakeLists.txt  DatabaseTests.cpp  authTests.cpp  cardTests.cpp  client-commands.sh  client-commands.txt  client_out_expected.txt  deckTests.cpp  end-end.sh  integrationTests.cpp  mockDatabase.cpp  mockDatabase.h  serverApiTests.cpp  serverMockTests.cpp  sqliteTest.cpp  statMocks.cpp  statTests.cpp
test/end-end/: client-commands-2-persistent.txt  client-commands-2.txt  client-commands.txt  client_out_expected-2-persistent.txt  client_out_expected-2.txt  client_out_expected.txt  end-end.sh
